Fix the issue of Chapter Add & Remove button size on mobile responsive

--- a/_sass/includes/_layout.scss
+++ b/_sass/includes/_layout.scss
@@ -7,7 +7,7 @@
     display: none;
 }
 .chapter-row .buttons .button.button-plusminus.minus {
-    padding: 0 17px;   
+    // padding: 0 17px;   //Disabled for minus button height change on mobile responsive
 }
 .book-cover {
     width: 45%;
